Add a beginning of implementation

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="network.css">
     <title>Data Viz</title>
   </head>
 <body>
 Hello world !
 Coming Soon ...
+<p id="graph">
+
+</p>
+<script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
+<script src="api.js"></script>
+<script src="customd3.js"></script>
 </body>
 </html>
