--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ Coming Soon ...
 <p id="graph">
 
 </p>
-<script src="http://d3js.org/d3.v2.min.js?2.9.3"></script>
+<script src="http://d3js.org/d3.v4.min.js"></script>
 <script src="api.js"></script>
-<script src="customd3.js"></script>
+<script src="customd3v4.js"></script>
 </body>
 </html>
