--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="network.css">
+    <link rel="stylesheet" href="brush.css">
     <title>Data Viz</title>
   </head>
 <body>
@@ -13,5 +14,6 @@ Coming Soon ...
 <script src="http://d3js.org/d3.v4.min.js"></script>
 <script src="api.js"></script>
 <script src="customd3v4.js"></script>
+<script src="brush.js"></script>
 </body>
 </html>
