--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <title>Data Viz</title>
   </head>
 <body>
-Hello world !
-Coming Soon ...
-<p id="graph">
-
-</p>
 <script src="http://d3js.org/d3.v4.min.js"></script>
 <script src="api.js"></script>
 <script src="customd3v4.js"></script>
 <script src="brush.js"></script>
+<div id='svgA'></div>
+<div id="svgB"></div>
 </body>
 </html>
