--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="network.css">
-  <!-- <link rel="stylesheet" href="brush.css"> -->
+  <link rel="stylesheet" href="brush.css">
   <link rel="stylesheet" href="tabs.css">
   <title>Data Viz</title>
 </head>
@@ -17,8 +17,8 @@
   </div>
 
   <div id="GraphTab" class="tabcontent">
-    <!-- <div id="svgB"></div> -->
     <div id='svgA'></div>
+    <div id="svgB"></div>
   </div>
 
   <!-- <div id="About" class="tabcontent">
@@ -29,7 +29,7 @@
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="api.js"></script>
   <script src="customd3v4.js"></script>
-  <!-- <script src="brush.js"></script> -->
+  <script src="brush.js"></script>
   <script src="tabs.js"></script>
 </body>
 
