--- a/semanticui/index.html
+++ b/semanticui/index.html
@@ -62,16 +62,7 @@
   </div>
 
 
-  <div class="ui sidebar inverted vertical menu">
-    <a class="item">
-      1
-    </a>
-    <a class="item">
-      2
-    </a>
-    <a class="item">
-      3
-    </a>
+  <div class="ui sidebar inverted vertical menu" id="sidebar">
   </div>
   <div class="pusher">
 
@@ -82,6 +73,7 @@
   <script src="http://d3js.org/d3.v4.min.js"></script>
   <script src="js/api.js"></script>
   <script src="js/graph.js"></script>
+  <script src="js/sideList.js"></script>
 </body>
 
 </html>
