Searchbars and close sidelist

--- a/semanticui/index.html
+++ b/semanticui/index.html
@@ -63,6 +63,23 @@
 
 
   <div class="ui sidebar inverted vertical menu" id="sidebar">
+    <p>
+      <img src="img/close.png" height="30px" align="right" id="closeSideList" />
+    </p>
+    <div class="ui search" id="peoplesearch">
+      <div class="ui icon input">
+        <input class="prompt" placeholder="Search People..." type="text">
+        <i class="search icon"></i>
+      </div>
+      <div class="results"></div>
+    </div>
+    <div class="ui search" id="documentsearch">
+      <div class="ui icon input">
+        <input class="prompt" placeholder="Search documents..." type="text">
+        <i class="search icon"></i>
+      </div>
+      <div class="results"></div>
+    </div>
   </div>
   <div class="pusher">
 
