Refactor repo structure

--- a/index.html
+++ b/index.html
@@ -2,44 +2,95 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="network.css">
-  <link rel="stylesheet" href="brush.css">
-  <link rel="stylesheet" href="tabs.css">
-  <link rel="stylesheet" href="sideList.css">
-  <title>Data Viz</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+  <title>JFK Dataviz</title>
+
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="css/graph.css">
+
 </head>
 
 <body>
 
-  <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeList()">&times;</a>
-  </div>
-  <div id="main">
-    <div class="navbar">
-      <button class="tablink" onclick="openCity('GraphTab', this, 'red')" id="defaultOpen">Graph</button>
-      <button class="tablink" onclick="openCity('About', this, 'green')">About</button>
-    </div>
-
-    <div id="GraphTab" class="tabcontent">
-      <div id='svgA'></div>
-      <div id="svgB"></div>
-    </div>
-
-    <div id="About" class="tabcontent">
-      <p onclick="openList()">
-        Show List
-      </p>
+  <div class="ui fixed tabular inverted menu">
+    <div class="ui container">
+      <a href="#" class="header item">
+        JFK Dataviz
+      </a>
+      <a class="item active" data-tab="first">Home</a>
+      <a class="item" data-tab="second">Process Book</a>
+      <a class="item" data-tab="third">Screencast</a>
     </div>
   </div>
 
+  <div class="ui main container tab segment active" data-tab="first">
+    <h1 class="ui header">First</h1>
+    <button id="showList">Show List</button>
+    <p>This is a basic fixed menu template using fixed size containers.</p>
+    <p>A text container is used for the main container, which is useful for single column layouts</p>
+    <div id='svgA'>
+    </div>
+  </div>
 
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="api.js"></script>
-  <script src="customd3v4.js"></script>
-  <script src="brush.js"></script>
-  <script src="tabs.js"></script>
-  <script src="sideList.js"></script>
+  <div class="ui main text container tab segment" data-tab="second">
+    <h1 class="ui header">Second</h1>
+    <p>This is a basic fixed menu template using fixed size containers.</p>
+    <p>A text container is used for the main container, which is useful for single column layouts</p>
+    <img class="wireframe" src="assets/images/wireframe/media-paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+  </div>
+  <div class="ui main text container tab segment" data-tab="third">
+    <h1 class="ui header">Third</h1>
+    <p>This is a basic fixed menu template using fixed size containers.</p>
+    <p>A text container is used for the main container, which is useful for single column layouts</p>
+    <img class="wireframe" src="assets/images/wireframe/media-paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
+  </div>
+
+
+  <div class="ui sidebar inverted vertical menu" id="sidebar">
+    <p>
+      <img src="img/close.png" height="30px" align="right" id="closeSideList" />
+    </p>
+    <div class="ui search" id="peoplesearch">
+      <div class="ui icon input">
+        <input class="prompt" placeholder="Search People..." type="text">
+        <i class="search icon"></i>
+      </div>
+      <div class="results"></div>
+    </div>
+    <div class="ui search" id="documentsearch">
+      <div class="ui icon input">
+        <input class="prompt" placeholder="Search documents..." type="text">
+        <i class="search icon"></i>
+      </div>
+      <div class="results"></div>
+    </div>
+  </div>
+  <div class="pusher">
+
+  </div>
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
+  <script src="js/index.js"></script>
+  <script src="http://d3js.org/d3.v4.min.js"></script>
+  <script src="js/api.js"></script>
+  <script src="js/graph.js"></script>
+  <script src="js/sideList.js"></script>
 </body>
 
 </html>
