--- a/index.html
+++ b/index.html
@@ -15,75 +15,16 @@
 </head>
 
 <body>
-
-  <div class="ui fixed tabular inverted menu">
-    <div class="ui container">
-      <a href="#" class="header item">
-        JFK Dataviz
-      </a>
-      <a class="item active" data-tab="first">Home</a>
-      <a class="item" data-tab="second">Process Book</a>
-      <a class="item" data-tab="third">Screencast</a>
-    </div>
-  </div>
-
-  <div class="ui main container tab segment active" data-tab="first">
-    <h1 class="ui header">First</h1>
-    <button id="showList">Show List</button>
-    <p>This is a basic fixed menu template using fixed size containers.</p>
-    <p>A text container is used for the main container, which is useful for single column layouts</p>
-    <div id='svgA'>
-    </div>
-  </div>
-
-  <div class="ui main text container tab segment" data-tab="second">
-    <h1 class="ui header">Second</h1>
-    <p>This is a basic fixed menu template using fixed size containers.</p>
-    <p>A text container is used for the main container, which is useful for single column layouts</p>
-    <img class="wireframe" src="assets/images/wireframe/media-paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-  </div>
-  <div class="ui main text container tab segment" data-tab="third">
-    <h1 class="ui header">Third</h1>
-    <p>This is a basic fixed menu template using fixed size containers.</p>
-    <p>A text container is used for the main container, which is useful for single column layouts</p>
-    <img class="wireframe" src="assets/images/wireframe/media-paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-    <img class="wireframe" src="assets/images/wireframe/paragraph.png">
-  </div>
-
-
-  <div class="ui sidebar inverted vertical menu" id="sidebar">
-    <p>
-      <img src="img/close.png" height="30px" align="right" id="closeSideList" />
-    </p>
-    <div class="ui search" id="peoplesearch">
-      <div class="ui icon input">
-        <input class="prompt" placeholder="Search People..." type="text">
-        <i class="search icon"></i>
+  <div class="box">
+  <div class="row header ui top attached tabular menu">
+  <div class="item active">Un onglet</div>
+</div>
+<div class="row content ui bottom active attached tab segment">
+      <div id="svgA">
       </div>
-      <div class="results"></div>
-    </div>
-    <div class="ui search" id="documentsearch">
-      <div class="ui icon input">
-        <input class="prompt" placeholder="Search documents..." type="text">
-        <i class="search icon"></i>
-      </div>
-      <div class="results"></div>
-    </div>
-  </div>
-  <div class="pusher">
+</div>
+</div>
 
-  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
   <script src="js/index.js"></script>
