--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/graph.css">
+  <link rel="stylesheet" type="text/css" href="css/brush.css">
 
 </head>
 
@@ -22,6 +23,8 @@
 <div class="row content ui bottom active attached tab segment">
       <div id="svgA">
       </div>
+      <div id="svgB" class="brush">
+      </div>
 </div>
 </div>
 
@@ -32,6 +35,7 @@
   <script src="js/api.js"></script>
   <script src="js/graph.js"></script>
   <script src="js/sideList.js"></script>
+  <script src="js/brush.js"></script>
 </body>
 
 </html>
