fix pb with sidebar. Menu deleted

--- a/index.html
+++ b/index.html
@@ -16,17 +16,31 @@
 </head>
 
 <body>
-  <div class="box">
-  <div class="row header ui top attached tabular menu">
-  <div class="item active">Un onglet</div>
-</div>
-<div class="row content ui bottom active attached tab segment">
-      <div id="svgA">
-      </div>
-      <div id="svgB" class="brush">
-      </div>
-</div>
-</div>
+  <button id="showList">Show List</button>
+  <div id="svgA">
+  </div>
+  <div id="svgB" class="brush">
+  </div>
+
+  <div class="ui sidebar inverted vertical menu" id="sidebar">
+    <p>
+          <img src="img/close.png" height="30px" align="right" id="closeSideList" />
+        </p>
+        <div class="ui search" id="peoplesearch">
+          <div class="ui icon input">
+            <input class="prompt" placeholder="Search People..." type="text">
+            <i class="search icon"></i>
+          </div>
+          <div class="results"></div>
+        </div>
+        <div class="ui search" id="documentsearch">
+          <div class="ui icon input">
+            <input class="prompt" placeholder="Search documents..." type="text">
+            <i class="search icon"></i>
+          </div>
+          <div class="results"></div>
+        </div>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
