--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui-calendar/0.0.8/calendar.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/graph.css">
   <link rel="stylesheet" type="text/css" href="css/brush.css">
@@ -24,10 +26,12 @@
   </div>
 
   <div class="ui sidebar inverted vertical menu" id="sidebar">
-    <p>
-      <img src="img/close.png" height="30px" align="right" id="closeSideList" />
+    <p style="text-align: right;">
+
+      <i class="material-icons" style="color:white;font-size: 300%;"id="closeSideList" >close</i>
+
     </p>
-    <div class="ui search" id="peoplesearch">
+    <div class="ui fluid search" id="peoplesearch">
       <div class="ui icon input">
         <input class="prompt" placeholder="Search People..." type="text">
         <i class="search icon"></i>
@@ -51,9 +55,12 @@
     <div class="header">
       Advanced search
     </div>
-    <div class="ui form" id="formAdSe">
+    <div class="ui form" id="formAdSe" style="margin-left: 5%;">
       <div class="field_wrapper">
-        <a href="javascript:void(0);" class="add_button" title="Add field"><img height="30px" src="img/add.png"/></a>
+        <p>
+          <h3>Add a new criterion : <i class="material-icons add_button" style="vertical-align:middle; color: #21ba45;">add_circle</i></h3>
+        </p>
+        <br />
         <div class="fields">
           <div class="field">
             <div class="ui sub header">Target</div>
