crop title+begin suggraphs

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
   <script src="js/sideList.js"></script>
   <script src="js/brush.js"></script>
   <script src="js/advancedSearch.js"></script>
+  <script src="js/disjointSet.js"></script>
 </body>
 
 </html>
