--- a/index.html
+++ b/index.html
@@ -59,18 +59,8 @@
             </div>
           </div>
           <div class="content">
-            <a class="ui label">
-                Crit 1
-            <i class="delete icon"></i>
-            </a>
-            <a class="ui label">
-                Crit 2
-            <i class="delete icon"></i>
-            </a>
-            <a class="ui label">
-                Crit 3
-            <i class="delete icon"></i>
-            </a>
+            <div  id="criteria">
+            </div>
             <div class="ui checkbox">
               <input name="noneOk" type="checkbox">
               <label>Show None values</label>
@@ -142,6 +132,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui-calendar/0.0.8/calendar.min.js"></script>
   <script src="js/index.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="js/criteria.js"></script>
   <script src="js/api.js"></script>
   <script src="js/graph.js"></script>
   <script src="js/sideList.js"></script>
