--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       </div>
       <div id="accordsb" class="ui fluid accordion">
         <div class="item">
-          <div class="title">
+          <div class="active title">
             <div class="qs">
               <label>Research criteria</label>
             </div>
           </div>
-          <div class="content">
+          <div class="content active">
             <div  id="criteria">
             </div>
             <div class="ui checkbox">
@@ -132,6 +132,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui-calendar/0.0.8/calendar.min.js"></script>
   <script src="js/index.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
+  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="js/criteria.js"></script>
   <script src="js/api.js"></script>
   <script src="js/graph.js"></script>
