--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             <div  id="criteria">
             </div>
             <div class="ui checkbox">
-              <input name="noneOk" type="checkbox">
+              <input name="noneOk" type="checkbox" onclick="displayNone(this)">
               <label>Show None values</label>
             </div>
             <div class="ui checkbox">
-              <input name="WhithheldOK" type="checkbox">
+              <input name="WhithheldOK" type="checkbox" onclick="displayWhitheld(this)">
               <label>Show Whitheld values</label>
             </div>
           </div>
