Check box for none and whithheld

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <div  id="criteria">
             </div>
             <div class="ui checkbox">
-              <input name="noneOk" type="checkbox" onclick="displayNone(this)">
-              <label>Show None values</label>
+              <input id="noneOk" type="checkbox" onclick="displayNone(this)">
+              <label for="noneOk">Show None values</label>
             </div>
             <div class="ui checkbox">
-              <input name="WhithheldOK" type="checkbox" onclick="displayWhitheld(this)">
-              <label>Show Whitheld values</label>
+              <input id="WhithheldOK" type="checkbox" onclick="displayWhithheld(this)">
+              <label for="WhithheldOK">Show Whithheld values</label>
             </div>
           </div>
         </div>
@@ -84,7 +84,7 @@
     <div class="ui form" id="formAdSe" style="margin-left: 5%;">
       <div class="field_wrapper">
         <p>
-          <h3>Add a new criterion : <i class="material-icons add_button" style="vertical-align:middle; color: #21ba45;">add_circle</i></h3>
+          <h3>Add a new criterion : <i class="material-icons add_button pointer" style="vertical-align:middle; color: #21ba45;">add_circle</i></h3>
         </p>
         <br />
         <div class="fields">
