bug story fixed and linked added

--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
             Play Story
             <i class="play icon" id="storyIcon"></i>
         </button>
+        <div style="bottom:2em; position:absolute; margin-left:30%">
+          <div class="ui labeled">
+            <a href="processBook.htm" style="color:black">Process book</a>
+          </div>
+          <div class="ui labeled">
+            <a href="processBook.htm" style="color:black">Presentation video</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -95,18 +103,17 @@
     </div>
     <div class="content">
       <p>On Friday, November 22, 1963, John Fitzgerald Kennedy, the 35th President of the United States is assassinated.</p>
-      <p>All eyes are on USSR. A document from J. Edgar Hoover, director of the FBI, to Marvin Watson, White House Chef of Staff
-      relates the reaction of the assination by the communist party officials.</p>
+      <p>All eyes are on the USSR. A document from J. Edgar Hoover, director of the FBI, to Marvin Watson, White House Chef of Staff relates the reaction of the assination by the communist party officials.</p>
       <br>
       <br>
       <p>Click on the link between Hoover and Watson to look at the document...</p>
     </div>
     <div class="actions">
       <div class="ui red basic cancel inverted button">
-        <i class="remove icon"></i> No
+        <i class="remove icon"></i> Cancel
       </div>
       <div class="ui green ok inverted button" onclick="event1()">
-        <i class="checkmark icon"></i> Yes
+        <i class="checkmark icon"></i> Ok
       </div>
     </div>
   </div>
@@ -120,10 +127,10 @@
     </div>
     <div class="actions">
       <div class="ui red basic cancel inverted button">
-        <i class="remove icon"></i> No
+        <i class="remove icon"></i> Cancel
       </div>
       <div class="ui green ok inverted button" onclick="event2()">
-        <i class="checkmark icon"></i> Yes
+        <i class="checkmark icon"></i> Ok
       </div>
     </div>
   </div>
@@ -133,37 +140,31 @@
       <i class="archive icon"></i>Oswald FBI informant ?
     </div>
     <div class="content">
-      <p>The FBI seemed to closely monitor testimony that the Warren Commission was
-        receiving in early 1964. In one internal memo, in response to testimony that
-        Oswald may have been an FBI informant, an FBI agent staunchly denies that Oswald
-        was ever an informant, lays out the process and tracking of informants.  - The Washington Post</p>
+      <p>The FBI seemed to closely monitor testimony that the Warren Commission was receiving in early 1964. In one internal memo, in response to testimony that Oswald may have been an FBI informant, an FBI agent staunchly denies that Oswald was ever an
+        informant, lays out the process and tracking of informants. - The Washington Post</p>
+    </div>
+    <div class="actions">
+      <div class="ui red basic cancel inverted button">
+        <i class="remove icon"></i> Cancel
       </div>
-      <div class="actions">
-        <div class="ui red basic cancel inverted button">
-          <i class="remove icon"></i> No
-        </div>
-        <div class="ui green ok inverted button" onclick="event3()">
-          <i class="checkmark icon"></i> Yes
-        </div>
+      <div class="ui green ok inverted button" onclick="event3()">
+        <i class="checkmark icon"></i> Ok
       </div>
     </div>
-    <div class="ui basic modal slide4">
-      <div class="ui icon header">
-        <i class="archive icon"></i>
+  </div>
+  <div class="ui basic modal slide4">
+    <div class="ui icon header">
+      <i class="archive icon"></i> Enjoy !
+    </div>
+    <div class="content">
+      <p>This is the end of this tour. If you want more information on the tools provided by this applications, take a look at the <a href="#">presentation video</a></p>
+    </div>
+    <div class="actions">
+      <div class="ui green ok inverted button" onclick="endStory()">
+        <i class="checkmark icon"></i> Ok
       </div>
-      <div class="content">
-        <p>This is the end of this tour. If you want more information on the tools provided by this applications, take a look at
-        the <a href="#">presentation video</a></p>
-        </div>
-        <div class="actions">
-          <div class="ui red basic cancel inverted button">
-            <i class="remove icon"></i> No
-          </div>
-          <div class="ui green ok inverted button" onclick="endStory()">
-            <i class="checkmark icon"></i> Yes
-          </div>
-        </div>
-      </div>
+    </div>
+  </div>
 
   <div class="ui modal advanced">
     <i class="close icon"></i>
