fixed issue links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             Play Story
             <i class="play icon" id="storyIcon"></i>
         </button>
-        <div style="bottom:2em; position:absolute; margin-left:30%">
+        <div style="margin:30%">
           <div class="ui labeled">
             <a href="processBook.htm" style="color:black">Process book</a>
           </div>
