--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </button>
         <div style="margin:30%">
           <div class="ui labeled">
-            <a href="processBook.htm" style="color:black">Process book</a>
+            <a href="https://github.com/gjolly/JFKDataViz/blob/master/specif.md" style="color:black">Process book</a>
           </div>
           <div class="ui labeled">
             <a href="processBook.htm" style="color:black">Presentation video</a>
