--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <a href="https://github.com/gjolly/JFKDataViz/blob/master/specif.md" style="color:black">Process book</a>
           </div>
           <div class="ui labeled">
-            <a href="processBook.htm" style="color:black">Presentation video</a>
+            <a href="https://www.youtube.com/watch?v=9_EnJx03gI4" style="color:black">Presentation video</a>
           </div>
         </div>
       </div>
